Add proper localization support.
Use Configurable attribute and reflection for dynamic Settings screen generation.
Improve Io utils to better support asset handling.
Improve app styling.
Add mock Stats view.
Cleanup csproj files and library versions.
- Defined brushes in resources.
Add IconButton templated control for nicer menu buttons.
Add styled props for brushes used by AnswerField.
Cleanup project structure.
Cleanup asset structure.
Fix a bug in keyboard event handling.
Improve README.

Signed-off-by: Tin Svagelj <tin.svagelj@live.com>

--- a/Wordel/Wordel/Assets/i18n/interface.en.json
+++ b/Wordel/Wordel/Assets/i18n/interface.en.json
@@ -1,4 +1,10 @@
 {
-  "WordLength": "Word length",
-  "TryCount": "Try count"
+  "UnknownWord": "Unknown word",
+  "InputNotInDict": "Entered word is not in dictionary.",
+  "LanguageSettingsOption": "Language:",
+  "WordLengthSettingsOption": "Word length:",
+  "MaxAnswersSettingsOption": "No. of tries:",
+  "GameVictory": "Victory!",
+  "GameFail": "You lose!",
+  "CorrectAnswer": "Correct answer"
 }
