--- a/Wordel/Wordel/Assets/i18n/keyboard.hr.json
+++ b/Wordel/Wordel/Assets/i18n/keyboard.hr.json
@@ -1,4 +1,4 @@
 {
-  "upper": ["QWERTZUIOPŠĐ", "ASDFGHJKLČĆŽ", "YXCVBNM"],
-  "lower": ["qwertzuiopšđ", "asdfghjklčćž", "yxcvbnm"]
+  "upper": ["QWERTZUIOPŠĐ", "ASDFGHJKLČĆ", "YXCVBNMŽ"],
+  "lower": ["qwertzuiopšđ", "asdfghjklčć", "yxcvbnmž"]
 }
