Fix Android build
Add SQLite backed game stats tracking
- Doesn't seem to work on Android yet
Cleanup some code

Signed-off-by: Tin Svagelj <tin.svagelj@live.com>

--- a/Wordel/Wordel/Assets/i18n/interface.en.json
+++ b/Wordel/Wordel/Assets/i18n/interface.en.json
@@ -6,5 +6,15 @@
   "MaxAnswersSettingsOption": "No. of tries:",
   "GameVictory": "Victory!",
   "GameFail": "You lose!",
-  "CorrectAnswer": "Correct answer"
+  "CorrectAnswer": "Correct answer",
+  "Letters": "letters",
+  "Try": "try",
+  "Tries": "tries",
+  "ScreenStats": "Stats",
+  "ScreenSettings": "Settings",
+  "StatWins": "Games Won",
+  "StatLoses": "Games Lost",
+  "StatTotal": "Total Games Played",
+  "StatLongest": "Longest Guessed Word",
+  "StatQuickest": "Quickest Victory"
 }
